# cloudops-logging-google

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  main.py  pyproject.toml  utils.bash
.github/workflows/: deploy.yml  main.yml  test.yml
cloudops-logging-google/: config.py  logging.py
cloudops/logging/google/: __init__.py  logging.py
tests/: test_config.py  test_logger.py
