[tool.poetry]
name = "cloudops-logging-google"
packages = [{ include = "cloudops" }]
version = "0.1.7"
description = ""
authors = ["Manuel Castillo-Lopez <manucalop@gmail.com>"]
license = "MIT"
repository = "https://github.com/manucalop/cloudops-logging-google"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
google-cloud-logging = "^3.5.0"
colorlog = { version = "^6.8.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
colors = ["colorlog"]

[project.urls]
Home = "https://github.com/manucalop/cloudops-logging-google"
